# ylhb-smart-retail-robot

./: .gitignore  LICENSE  MIGRATION_JETSON.md  README.md  SECURITY.md
CAD/Retail-Cart-3D-Model/sldasm/: 万向轮.SLDASM  小车底盘.SLDASM  机械爪.SLDASM
CAD/Retail-Cart-3D-Model/stl/: 小车底盘 - 万向轮-1 万向轮-1.STL  小车底盘 - 万向轮-1 万向轮底座-1.STL  小车底盘 - 万向轮-1 万向轮支架-1.STL  小车底盘 - 上底盘-1.STL  小车底盘 - 人工智能小车底盘-1.STL  小车底盘 - 伸缩杆固定底座-1.STL  小车底盘 - 伸缩杆支架盖子-1.STL  小车底盘 - 前半圆-2.STL  小车底盘 - 前半圆X-1.STL  小车底盘 - 前后半圆连接件-1.STL  小车底盘 - 前后半圆连接件-2.STL  小车底盘 - 北斗定位模块-1.STL  小车底盘 - 双目架-2.STL  小车底盘 - 双目活动架-1.STL  小车底盘 - 后半圆-3.STL  小车底盘 - 后半圆X-2.STL  小车底盘 - 后半圆固定架-1.STL  小车底盘 - 后半圆连接-固定件-1.STL  小车底盘 - 固定盖-1.STL  小车底盘 - 固定盖-2.STL  小车底盘 - 屏幕右-2.STL  小车底盘 - 屏幕右后壳-1.STL  小车底盘 - 屏幕壳子右-1.STL  小车底盘 - 屏幕壳子左-3.STL  小车底盘 - 屏幕左-2.STL  小车底盘 - 屏幕左后壳-1.STL  小车底盘 - 工形柱-1.STL  小车底盘 - 工形柱-2.STL  小车底盘 - 工形柱-3.STL  小车底盘 - 工形柱-4.STL  小车底盘 - 工形柱-5.STL  小车底盘 - 工形柱-6.STL  小车底盘 - 底盘连接处支架X-1.STL  小车底盘 - 底盘连接处支架X-2.STL  小车底盘 - 抱死机构-2.STL  小车底盘 - 抱死机构X-1.STL  小车底盘 - 支架垫片-2.STL  小车底盘 - 支架垫片-4.STL  小车底盘 - 支架垫片-6.STL  小车底盘 - 支架垫片-7.STL  (+23 more)
CAD/Retail-Cart-3D-Model/stp/: 5G模块.SLDPRT  5G盖子.SLDPRT  上底盘.SLDPRT  人工智能小车底盘.SLDPRT  伸缩杆.SLDPRT  伸缩杆固定底座.SLDPRT  伸缩杆支架盖子.SLDPRT  充电宝电源.SLDPRT  关节盖子.SLDPRT  前半圆.SLDPRT  前半圆X.SLDPRT  前后半圆连接件.SLDPRT  北斗定位模块.SLDPRT  双目架.SLDPRT  双目活动架.SLDPRT  台子.SLDPRT  后半圆.SLDPRT  后半圆X.SLDPRT  后半圆连接-固定件.SLDPRT  固定盖.SLDPRT  垫片.SLDPRT  垫高柱.SLDPRT  夹具.SLDPRT  夹持装置.SLDPRT  定位模块固定板.SLDPRT  小北斗模块.SLDPRT  屏幕右.SLDPRT  屏幕右后壳.SLDPRT  屏幕壳子上面固定件.SLDPRT  屏幕壳子下面连接件.SLDPRT  屏幕壳子右.SLDPRT  屏幕壳子左.SLDPRT  屏幕左.SLDPRT  屏幕左后壳.SLDPRT  底盘连接处支架X.SLDPRT  抱死机构.SLDPRT  抱死机构X.SLDPRT  支撑架.SLDPRT  支架.SLDPRT  支架垫片.SLDPRT  (+29 more)
docs/: PROMOTION_KIT.md  pcan_peak_setup.md
docs/比赛规则/: 机器人应用赛，智慧零售比赛规则.md
maps/routes/: retail_competition_route.json
scripts/: build_on_jetson.sh  diagnose_pcan.sh  git_publish.sh  install_jetson_dependencies.sh  install_peak_pcan_safe.sh  run_on_jetson.sh  setup_zlac_can.sh
sldasm/: 万向轮.SLDASM  小车底盘.SLDASM
src/: .gitignore  PROJECT_DOC_zh.md  README.md  bind_usb.sh  my_map.pgm  my_map.yaml  test_chassis.sh
src/rplidar_ros-ros2/src/: rplidar_node.cpp
src/ylhb_base/: CMakeLists.txt  package.xml
src/ylhb_base/behavior_trees/: navigate_through_poses_wait_recovery.xml  navigate_to_pose_wait_recovery.xml
src/ylhb_base/config/: base_kinematics.yaml  ekf.yaml  nav2_no_recovery.xml  nav2_params.yaml  robot_geometry.yaml  slam_toolbox_params.yaml  zlac8015d.yaml
src/ylhb_base/include/ylhb_base/: zlac_drive_mapping.hpp  zlac_status.hpp
src/ylhb_base/launch/: bringup.launch.py  mapping.launch.py  navigation.launch.py
src/ylhb_base/scripts/: auto_align.py  vision_node.py
src/ylhb_base/src/: base_controller.cpp  imu_driver.cpp  normalize_goal_bt_node.cpp  zlac8015d_canopen_controller.cpp  zlac_status.cpp
src/ylhb_base/test/: test_zlac_drive_mapping.cpp  test_zlac_status.cpp
src/ylhb_base/urdf/: ylhb.urdf.xacro
src/ylhb_interfaces/: CMakeLists.txt  package.xml
src/ylhb_interfaces/msg/: CartState.msg  RecognizedProduct.msg  SayText.msg  TaskEvent.msg  TaskStatus.msg  VoiceStatus.msg
src/ylhb_llm/: package.xml  setup.cfg  setup.py
src/ylhb_llm/config/: llm.yaml  products.yaml
src/ylhb_llm/launch/: llm.launch.py
src/ylhb_llm/test/: test_b1_recommendation_speech.py  test_competition_safe_mode.py  test_general_chat.py  test_health.py  test_motion_health.py  test_run_on_jetson_competition_safe.py  test_sales_followup.py  test_voice_nodes.py  test_voice_stability.py
src/ylhb_llm/test_images/: README.md
src/ylhb_llm/ylhb_llm/: __init__.py  basic_motion_command_node.py  health.py  product_catalog.py  qwen_client.py  retail_competition_executor_node.py  retail_display_ui_node.py  retail_task_node.py  system_supervisor_node.py  vlm_recognition_nodes.py  voice_command_router_node.py  voice_input_node.py  voice_output_node.py  voice_session_node.py  voice_stability.py
src/ylhb_mobile_bridge/: setup.py
src/ylhb_mobile_bridge/launch/: patrol_executor.launch.py
src/ylhb_mobile_bridge/ylhb_mobile_bridge/: patrol_executor_node.py  patrol_qos.py  patrol_route_store.py
src/ylhb_perception/: CMakeLists.txt  package.xml
src/ylhb_perception/config/: detector.yaml
src/ylhb_perception/launch/: perception.launch.py
src/ylhb_perception/models/: README.md
src/ylhb_perception/scripts/: export_yolo_trt.py  object_localizer_node.py  yolo_detector_node.py
src/ylhb_perception/src/: yolo_detector_node.cpp
src/zed-ros2-wrapper/: README.md
stp/: 万向轮.SLDPRT  万向轮底座.SLDPRT  万向轮支架.SLDPRT  上底盘.SLDPRT  人工智能小车底盘.SLDPRT  伸缩杆.SLDPRT  伸缩杆固定底座.SLDPRT  伸缩杆支架盖子.SLDPRT  伸缩柱.SLDPRT  伸缩柱底座.SLDPRT  前半圆.3MF  前半圆.SLDPRT  前半圆X.SLDPRT  前半圆固定架.SLDPRT  前后半圆连接件.SLDPRT  双目垫板.SLDPRT  后半圆.3MF  后半圆.SLDPRT  后半圆X.3MF  后半圆X.SLDPRT  后半圆固定架.SLDPRT  后半圆连接-固定件.SLDPRT  固定盖.SLDPRT  工形柱.SLDPRT  底盘连接处支架X.SLDPRT  支架垫片.SLDPRT  模块固定.SLDPRT  模块固定盖.SLDPRT  激光雷达固定架.SLDPRT  激光雷达支架.SLDPRT  电机轮.SLDPRT  电池.SLDPRT  电池固定.SLDPRT  电池门.SLDPRT  盖板.SLDPRT  稳压板底座.SLDPRT  第三层板.SLDPRT  英伟达固定板X.SLDPRT  螺母.SLDPRT  语音播报模块固定盖.SLDPRT  (+4 more)
